--- a/bio.html
+++ b/bio.html
@@ -3,8 +3,11 @@
     <head>
         <title>Bio: About Me</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="menu.css">
+        <script src="sitemap.js"></script>
     </head>
-    <body>
+    <body onload="buildMap('menubar')">
+        <div id="menubar"></div>
             <p><b>What I want to learn in Software Engineering:</b><br>I want to know how servers interact with each other, and be able to create my own webpage, and know what to do afterwards</p>
             <p><b>My favorite webpage so far:</b><a href="https://codehs.com/editor/html/153982/274650/index.html">click here</a></p>
             <p><b>My Favorite Songs/Musicians:</b><a href="https://perryma.tk/therightnumber/music.html">click here</a></p>
